--- a/views/item.edge
+++ b/views/item.edge
@@ -6,7 +6,7 @@
   <div class="row">
   
       <div class="col-lg-7 detail_img">
-          <img class="img-fluid" src="{{item.imagePath}}" alt="{{item.name}}">
+          <img class="img-fluid detail_img" src="{{item.imagePath}}" alt="{{item.name}}">
       </div>
       <div class="col-lg-5">
           <form action="/addToCart" method="POST">
