--- a/views/cart.edge
+++ b/views/cart.edge
@@ -8,7 +8,7 @@
   });		
 </script>
     @if(EmptyCart)
-        <h1>Cart is Empty</h1>
+        <h1 style="text-align : center;">Cart is Empty</h1>
     @else
     <div class="col-lg-12">
     <div class="row">
